--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Da Ma / Digital Medicine Analytic and Computation La
 title_separator          : "-"
 name                     : &name "Da Ma"
 description              : &description "Assistant Professor, Wake Forest University School of Medicine"
-url                      : https://dmac-lab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://da-ma-dm.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "dmac-lab/dmac-lab.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
