--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Da Ma" # / Digital Medicine Analytic and Computation
 title_separator          : "-"
 name                     : &name "Da Ma"
 description              : &description "Assistant Professor,      Wake Forest University School of Medicine"
-url                      : https://da-ma-dm.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://school.wakehealth.edu/faculty/m/da-ma # https://da-ma-dm.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "dmac-lab/dmac-lab.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -84,10 +84,10 @@ author:
   avatar           : "profile.jpg"
   bio              : "Assistant Professor, Wake Forest University School of Medicine"
   location         : "Winston-Salem, NC, USA"
-  employer         :
+  employer         : "Wake Forest University School of Medicine"
   pubmed           : "https://www.ncbi.nlm.nih.gov/myncbi/da.ma.1/bibliography/public/"
   googlescholar    : "https://scholar.google.com/citations?user=5oigaVwAAAAJ&hl=en&inst=10441630620217902552"
-  email            :
+  email            : "dma@wakehealth.edu"
   researchgate     :  "https://www.researchgate.net/profile/Da-Ma-10"
   uri              :
   bitbucket        :
