update students opportunities page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Students"
-    url: /students/
+  - title: "Students & Opportunities"
+    url: /students_opportunities/
         
   # - title: "Blog Posts"
   #   url: /year-archive/
